Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -13,6 +13,7 @@
           * InteraccionJuegosAndroid
       * Prototipos
           * PrototipoLoaderAndroid
+          * PrototipoDrawPicsAndroid
     * E-Adventure
       * RequisitosFuncionales
     * Proyecto SI
