Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -11,6 +11,8 @@
       * Estudios de la plataforma
           * ImagenesAndroid
           * InteraccionJuegosAndroid
+          * GestosAndroid
+
       * Prototipos
           * PrototipoLoaderAndroid
           * PrototipoDrawPicsAndroid
