Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -15,7 +15,9 @@
       * Prototipos
           * PrototipoLoaderAndroid
           * PrototipoDrawPicsAndroid
-    * E-Adventure
+    * e-Adventure
       * RequisitosFuncionales
+    * e-AdventureAndroidEngine
+      * AndroidEngine
     * Proyecto SI
       * IndiceMemoria
