--- a/trunk/EADAndroidEngine/res/values/strings.xml
+++ b/trunk/EADAndroidEngine/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="no_games">No games found</string>
-    <string name="app_name">e-Adventure Android Engine</string>
+    <string name="app_name">&lt;e-Ad&gt;</string>
 
 <string name="menu_install">Install games</string>
 <string name="menu_uninstall">Uninstall games</string>
