Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -19,5 +19,6 @@
       * RequisitosFuncionales
     * e-!AdventureAndroidEngine
       * AnotacionesIniciales
+      * HUD
     * Proyecto SI
       * IndiceMemoria
