Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -19,6 +19,6 @@
       * RequisitosFuncionales
     * e-!AdventureAndroidEngine
       * AnotacionesIniciales
-      * HUD
+      * [HUD]
     * Proyecto SI
       * IndiceMemoria
