Edited wiki page through web user interface.

--- a/wiki/RepartoTareas.wiki
+++ b/wiki/RepartoTareas.wiki
@@ -8,6 +8,8 @@
 
 == Semana 25Ene - 1-Feb ==
 
+ * Como objetivo nos marcamos eliminar 500 errores de compilación .
+
 ===Juanma ===
 
  * Portar functional data
